# rust4physics

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/numerics/: integrate.rs  mod.rs  numerov.rs  root.rs
src/quantum/: density.rs  hamiltonian_fd.rs  medium.rs  mod.rs  potentials.rs  radial.rs  wavepacket.rs
